<resources>
    <string name="app_name">Techno Admin</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="home">Home</string>
    <string name="wish">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="back_button">Back Button</string>
    <string name="copyright_text">Made By \nKusal Adithya</string>
    <string name="my_products">My Products</string>
    <string name="search_products">Search Products</string>
</resources>