<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/sideNavHome"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>

    <item
        android:id="@+id/bottomNavAbout"
        android:icon="@drawable/about_icon"
        android:title="@string/about"/>


    <group android:id="@+id/menuViewGroupMain">

        <item
            android:id="@+id/bottomNavOrders"
            android:icon="@drawable/order_icon"
            android:title="@string/orders"
            />

        <item
            android:id="@+id/bottomNavNotifi"
            android:icon="@drawable/notification_icon"
            android:title="@string/notifications"
            />


        <item
            android:id="@+id/bottomNavLogout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout"
            />
    </group>

</menu>